build: Add support to ccache

--- a/settings.conf
+++ b/settings.conf
@@ -5,6 +5,9 @@ COMMON_KERNEL_VERSION="1.0"
 # AK3 settings
 INCLUDE_DATE_IN_ZIP_FILENAME="true"
 
+# Enable ccache
+ENABLE_CCACHE="true"
+
 # Username and machine name
 export KBUILD_BUILD_USER="SebaUbuntu"
 export KBUILD_BUILD_HOST="Seba-PC"
