pyproject.toml: Fix module name
Change-Id: I2acbfea2c9a380c792d37299d72d39ca7d37f5e3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "android-kernel-builder"
+name = "build_kernel"
 version = "1.1.0"
 description = "Android kernel building script"
 authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
