build_kernel: Support Python 3.8
Change-Id: I05c81ace2509dc5eccf6d594e30a2300df77c6e4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "build_kernel"
 version = "1.2.0"
-description = "Android kernel building script"
+description = "Linux kernel building script"
 authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 GitPython = "^3.1.27"
 
 [tool.poetry.dev-dependencies]
