--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "build_kernel"
 version = "1.2.0"
 description = "Linux kernel building script"
 authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
+license = "LGPL-3.0-or-later"
+readme = "README.md"
+repository = "https://github.com/sebaubuntu-python/build_kernel"
 
 [tool.poetry.dependencies]
 python = "^3.8"
